<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".activities.AddPictureActivity">

    <Button
        android:id="@+id/addFromDeviceButton"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:text="Add picture from device"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fromDeviceImageView"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/fromDeviceImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177" />

    <Button
        android:id="@+id/saveFromDeviceButton"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:text="Save picture to database"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nameInputText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameInputText"
        app:layout_constraintTop_toBottomOf="@+id/addFromDeviceButton"
        app:layout_constraintVertical_bias="0.689" />

    <ImageView
        android:id="@+id/fromDeviceImageView"
        android:layout_width="270dp"
        android:layout_height="204dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameInputText"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:hint="name of person in the picture"
        android:textSize="14sp"
        android:visibility="invisible"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/saveFromDeviceButton"
        app:layout_constraintEnd_toEndOf="@+id/fromDeviceImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fromDeviceImageView"
        app:layout_constraintTop_toBottomOf="@+id/fromDeviceImageView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>