<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/addDatabaseMenuItem"
        android:title="Add"
        app:showAsAction="always" />
    <item
        android:id="@+id/homeDatabaseMenuItem"
        android:title="Home"
        app:showAsAction="always" />
</menu>