<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp"
    android:layout_margin="5dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/removeButton"
            android:layout_height="35dp"
            android:layout_width="103dp"
            android:width="130dp"
            android:height="30dp"
            android:layout_centerHorizontal="true"
            android:text="Remove"
            android:textSize="8dp"
            />

        <ImageView
            android:id="@+id/pictureImage"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher"
            android:layout_below="@id/removeButton"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Picture Name"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_below="@+id/pictureImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:id="@+id/pictureText"
            />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>